DesignProject/tests/pass/test04_pass.src
func multiply(a : int, b : int) -> int {
    return(a * b);
}

func add(a : int, b : int) -> int {
    local sum : int;
    sum := a + b;
    return(sum);
}

func compute(x : int, y : int) -> int {
    local prod : int;
    local sum : int;
    prod := multiply(x, y);
    sum := add(x, y);
    return(prod + sum);
}

